remove lombok + update builds